Changelog:

1.9.4
	Reverted changes made in 1.9.3
	Added automatic recalculation delay setting instead

1.9.3
	Added stock settings option to disable automatic recalc if RealChutes is installed
	Added code to check for RealChutes & stock option regarding recalc.
	Added Right-Click on toolbar button in editor to do recalculation

1.9.2.2
	Removed duplicated code in SettingsGUI.cs
	Thanks to github user @tinygrox for this:
		Localization implemented, currently only en-us available

1.9.2.1
	Thanks to GitHub user @mwerle for these fixes:
		 Fix for StageRecovery failing to recover certain stages.
		 Change a couple of error logs to info logs to stop log spam.

1.9.2
	Updated for KSP 1.8

1.9.1.4
	Reorganized code to avoid segfaults on pre-1.7 games due to the new ModuleDecouplerBase being added in 1.7

1.9.1.3
	Rewrite engine plate code due to an infinite loop which was happening when the top node of an engineplate was attached before the bottom node was

1.9.1.2
	Thanks to forum user @aerospike for this:
		Fix issue with stock engine plates being in wrong stage

1.9.1.1
	Fixed issue with showing remaining fuel on one stage and another stage not having liquid fuel (ie: solid), was getting GUI errors
	Moved RegisterToolbar into it's own file
	Added InstallChecker
	Updated AssemblyVersion.tt

1.9.1
	Added display of remaining fuel after recovery
	Added "Fuel" section to the SR window, only if there was any leftover fuel

1.9.0.7
	Fixed registration with the RecoveryController by moving initialization OUT of the Log.Info line

1.9.0.6
	Changed startup from AllGameScenes to FlightEditorAndKSC
	Fixed Nullref when going into settings before any game is loaded

1.9.0.5
	Unreleased debug version

1.9.0.4
	Fixed recalculation, where root part wasn't part[0] anymore, added search for part with no parent
	Added new event to recalculate automatically when ship is modified.  Does not recalculate when ship is deleted
	Updated windows with support for ClickThroughBlocker

1.9.0.3